syntax = "proto3";
package virtengine.staking.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";
import "virtengine/staking/v1/params.proto";
import "virtengine/staking/v1/types.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/staking/v1";

// Msg defines the staking Msg service
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams updates module parameters (governance only)
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  // SlashValidator slashes a validator for misbehavior
  rpc SlashValidator(MsgSlashValidator) returns (MsgSlashValidatorResponse);

  // UnjailValidator unjails a validator
  rpc UnjailValidator(MsgUnjailValidator) returns (MsgUnjailValidatorResponse);

  // RecordPerformance records validator performance metrics
  rpc RecordPerformance(MsgRecordPerformance) returns (MsgRecordPerformanceResponse);
}

// MsgUpdateParams is the message for updating module parameters
message MsgUpdateParams {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "virt_staking/UpdateParams";

  // Authority is the address that controls the module (x/gov module account)
  string authority = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "authority",
    (gogoproto.moretags) = "yaml:\"authority\""
  ];

  // Params are the new module parameters
  Params params = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "params",
    (gogoproto.moretags) = "yaml:\"params\""
  ];
}

// MsgUpdateParamsResponse is the response for MsgUpdateParams
message MsgUpdateParamsResponse {}

// MsgSlashValidator is the message for slashing a validator
message MsgSlashValidator {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "virt_staking/SlashValidator";

  // Authority is the address that controls the module
  string authority = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "authority",
    (gogoproto.moretags) = "yaml:\"authority\""
  ];

  // ValidatorAddress is the validator to slash
  string validator_address = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  // Reason is the slashing reason
  SlashReason reason = 3 [
    (gogoproto.jsontag) = "reason",
    (gogoproto.moretags) = "yaml:\"reason\""
  ];

  // InfractionHeight is when the infraction occurred
  int64 infraction_height = 4 [(gogoproto.jsontag) = "infraction_height"];

  // Evidence is the evidence supporting the slash
  string evidence = 5 [
    (gogoproto.jsontag) = "evidence,omitempty",
    (gogoproto.moretags) = "yaml:\"evidence\""
  ];
}

// MsgSlashValidatorResponse is the response for MsgSlashValidator
message MsgSlashValidatorResponse {}

// MsgUnjailValidator is the message for unjailing a validator
message MsgUnjailValidator {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "validator_address";
  option (amino.name) = "virt_staking/UnjailValidator";

  // ValidatorAddress is the validator to unjail
  string validator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];
}

// MsgUnjailValidatorResponse is the response for MsgUnjailValidator
message MsgUnjailValidatorResponse {}

// MsgRecordPerformance is the message for recording validator performance
message MsgRecordPerformance {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "virt_staking/RecordPerformance";

  // Authority is the address that controls the module
  string authority = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "authority",
    (gogoproto.moretags) = "yaml:\"authority\""
  ];

  // ValidatorAddress is the validator
  string validator_address = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  // BlocksProposed is the number of blocks proposed
  int64 blocks_proposed = 3 [(gogoproto.jsontag) = "blocks_proposed"];

  // BlocksSigned is the number of blocks signed
  int64 blocks_signed = 4 [(gogoproto.jsontag) = "blocks_signed"];

  // VEIDVerificationsCompleted is VEID verifications completed
  int64 veid_verifications_completed = 5 [(gogoproto.jsontag) = "veid_verifications_completed"];

  // VEIDVerificationScore is the VEID verification quality score
  int64 veid_verification_score = 6 [(gogoproto.jsontag) = "veid_verification_score"];
}

// MsgRecordPerformanceResponse is the response for MsgRecordPerformance
message MsgRecordPerformanceResponse {}
